Getting the radio and check buttons to align correctly.
--HG--
extra : convert_revision : svn%3A01e103ed-f575-20b1-d296-6440ccab0075/GroupServerTemplates/trunk%401662

--- a/Presentation/Tofu/Common/css/globalstyle.css
+++ b/Presentation/Tofu/Common/css/globalstyle.css
@@ -99,20 +99,27 @@ fieldset legend {
     width: auto;
 }
 
-.checkgroup input, .checkgroup label{
+.checkgroup, .radiogroup {
+  margin: 10px 0px 10px 0px
+}
+.checkgroup input, .checkgroup label, .radiogroup input, .radiogroup label{
     display: inline;
 }
-.checkgroup input {
-    margin: 10px 10px 0px 0px;
+.checkgroup input, .radiogroup input {
+    margin: 0px;
 }    
 
-.checkgroup label {
+.checkgroup label, .radiogroup label {
     margin: 0px 0px 0px 10px;
 }
 
 .formelementtext {
     margin: 30px 0px 30px 0px;
     display: block;
+}
+
+.radiogroup label {
+  
 }
 
 /* Feedback Messages */
